# HackCLT2019

./: .gitignore  Camino.csv  Cargo.toml  README.md  client_encounters.csv  data.csv  heatmap.js  heatmap_data.json  out.txt  page.html  physicians_reachout.csv  zips.csv
src/: .heatmap_data.rs.swp  heatmap_data.rs  main.rs
